Added lab and updated kernel

--- a/notebooks/LC3-Kernel.ipynb
+++ b/notebooks/LC3-Kernel.ipynb
@@ -18,37 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "969b7109-38b3-4e3f-a67e-07f73a43f4bd",
    "metadata": {
     "vscode": {
      "languageId": "lc3asm"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "break <action> [args...] - performs action (see break help for details)\n",
-      "help                     - display this message\n",
-      "list [N]                 - display the next instruction to be executed with N rows of context\n",
-      "load <filename>          - loads an object file\n",
-      "mem <start> [<end>]      - display values in memory addresses start to end\n",
-      "quit                     - exit the simulator\n",
-      "randomize                - randomize the memory and general purpose registers\n",
-      "regs                     - display register values\n",
-      "restart                  - restart program (and go to user mode)\n",
-      "run [<instructions>]     - runs to end of program or, if specified, the number of instructions\n",
-      "set <loc> <value>        - sets loc (either register name or memory address) to value\n",
-      "step in                  - executes a single instruction\n",
-      "step over                - executes a single instruction (treats subroutine calls as a single\n",
-      "                           instruction)\n",
-      "step out                 - steps out of a subroutine if in one\n",
-      "Executed 0 instructions"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help"
    ]
@@ -97,7 +74,7 @@
    "id": "06f4b2a1-9b24-4c3f-993d-a6f83b0ad6b3",
    "metadata": {
     "vscode": {
-     "languageId": "julia"
+     "languageId": "lc3asm"
     }
    },
    "outputs": [],
